--- a/public/index.css
+++ b/public/index.css
@@ -39,23 +39,39 @@ input {
   border: 1px solid black;
   margin: 10px;
   padding: 10px;
-  width: 50%;
+  max-height: 15rem;
+  overflow: scroll;
+
 }
 
 .author {
   background-color: lightpink;
 }
 
-/* testing */
-#my-account {
-display: flex;
-flex-direction: column;
-align-items: center;
-align-self: flex-end;
-border: 1px solid black;
-width: 40%;
-
+.NavLink {
+  color: black;
+  background-color: #efefef;
+  border: 1px solid black;
+  text-decoration: none;
+  padding: 2px 7px;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 5%;
+  margin: 5px;
 
 }
 
+.PostForm {
 
+  padding: 10px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+ .PostForm input {
+background-color: ghostwhite;
+
+
+}
