--- a/public/index.css
+++ b/public/index.css
@@ -39,8 +39,8 @@ input {
   border: 1px solid black;
   margin: 10px;
   padding: 10px;
-  max-height: 15rem;
-  overflow: scroll;
+  /* max-height: 15rem; */
+  /* overflow: scroll; */
 
 }
 
@@ -58,10 +58,9 @@ align-items: center;
 align-self: flex-end;
 border: 1px solid black;
 width: 40%;
-
+}
 
 .PostForm {
-
   padding: 10px;
   margin: 20px;
   display: flex;
