--- a/public/index.css
+++ b/public/index.css
@@ -76,4 +76,10 @@ background-color: ghostwhite;
 
 .individual-message {
 border: 1px solid black;
+margin: 5px;
+}
+
+.dashboard-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
