--- a/public/index.css
+++ b/public/index.css
@@ -77,6 +77,7 @@ background-color: ghostwhite;
 .individual-message {
 border: 1px solid black;
 margin: 5px;
+padding-left: 10px;
 }
 
 .dashboard-content {
