--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 body {
  
   font-family: 'Raleway', Arial, sans-serif;
@@ -7,7 +12,7 @@ body {
 }
 
 #navbar {
-  font-family: 'Poller One', Arial, sans-serif;
+ font-family:Arial, Helvetica, sans-serif;
   flex-grow: 1;
   max-height: 10%;
   min-height: 40px;
@@ -18,6 +23,7 @@ body {
   justify-content: space-between;
   padding-right: 10px;
   padding-left: 10px;
+  background-color: purple;
 }
 
 
@@ -45,7 +51,7 @@ input {
 }
 
 .post-display .author {
-  background-color: lightpink;
+  background-color: rgb(247, 237, 247);
 }
 
 
@@ -68,19 +74,29 @@ width: 40%;
   align-items: flex-start;
 }
 
- .PostForm input {
-background-color: ghostwhite;
 
-
-}
 
 .individual-message {
 border: 1px solid black;
 margin: 5px;
 padding-left: 10px;
+
 }
 
 .dashboard-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.dashboard-content h1 {
+  text-align: center;
+  color: purple;
+}
+
+button {
+  background-color: rgb(247, 237, 247);
+}
+
+.user-dashboard h1 {
+  color: purple;
 }
